OLLAMA COMB BACK

--- a/.env
+++ b/.env
@@ -33,7 +33,11 @@ MODEL_REPEAT_LAST_N=64                    # Default: 64
 # Context and prediction settings
 MODEL_NUM_CTX=2048                        # Context window
 MODEL_NUM_PREDICT=512                     # Max tokens to generate
-MODEL_SEED=0                              # Default: 0                 
+MODEL_SEED=0                              # Default: 0    
+
+# Model file management
+OLLAMA_NUM_THREAD=4                       # CPU threads for Ollama processing
+OLLAMA_MMAP=false                         # Disable memory mapping (force RAM loading)
 
 # =============================================================================
 # 📱 APPLICATION SETTINGS
