--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - CONFIGURED FOR VLLM BACKEND
+# nginx/nginx.conf - CONFIGURED FOR OLLAMA BACKEND
 worker_processes auto;
 error_log /var/log/nginx/error.log info;
 pid /var/run/nginx.pid;
@@ -6,8 +6,17 @@ pid /var/run/nginx.pid;
 env JWT_SECRET;
 env REDIS_HOST;
 env REDIS_PORT;
-env VLLM_URL;
-env VLLM_MODEL;
+env MODEL_URL;
+env MODEL_NAME;
+env MODEL_TEMPERATURE;
+env MODEL_TOP_P;
+env MODEL_TOP_K;
+env MODEL_NUM_CTX;
+env MODEL_NUM_PREDICT;
+env MODEL_REPEAT_PENALTY;
+env MODEL_REPEAT_LAST_N;
+env MODEL_SEED;
+env OLLAMA_GPU_LAYERS;
 
 events {
     worker_connections 1024;
@@ -223,8 +232,8 @@ http {
             }
         }
 
-        # VLLM OPENAI-COMPATIBLE API - CHAT COMPLETIONS
-        location ~ ^/v1/chat/completions {
+        # OLLAMA DIRECT PROXY (for debugging/testing)
+        location ~ ^/ollama/(.*)$ {
             # CORS headers
             add_header 'Access-Control-Allow-Origin' '*' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
@@ -237,78 +246,8 @@ http {
                 return 204;
             }
             
-            # CRITICAL: Complete streaming configuration
-            chunked_transfer_encoding on;      # Enable chunked encoding
-            lua_need_request_body on;
-            lua_check_client_abort on;         # Check if client disconnects
-            content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.route_to_handler("vllm_chat_api")
-            }
-        }
-
-        # VLLM OPENAI-COMPATIBLE API - MODELS
-        location ~ ^/v1/models {
-            # CORS headers
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
-            
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain; charset=utf-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
-            
-            content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.route_to_handler("vllm_models_api")
-            }
-        }
-
-        # VLLM OPENAI-COMPATIBLE API - COMPLETIONS (non-chat)
-        location ~ ^/v1/completions {
-            # CORS headers
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
-            
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain; charset=utf-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
-            
-            # CRITICAL: Complete streaming configuration
-            chunked_transfer_encoding on;      # Enable chunked encoding
-            lua_need_request_body on;
-            lua_check_client_abort on;         # Check if client disconnects
-            content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.route_to_handler("vllm_completions_api")
-            }
-        }
-
-
-
-        # VLLM DIRECT PROXY (for debugging/testing)
-        location ~ ^/vllm/(.*)$ {
-            # CORS headers
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
-            
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain; charset=utf-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
-            
-            # Direct proxy to vLLM
-            proxy_pass http://vllm:8000/$1$is_args$args;
+            # Direct proxy to Ollama
+            proxy_pass http://ollama:11434/$1$is_args$args;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
