--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -94,46 +94,46 @@ http {
         location = /login {
             content_by_lua_block {
                 local is_who = require "is_who"
-                is_who.handle_login_page()
+                is_who.route_to_handler("login")
             }
         }
-        
+
         location = /register {
             content_by_lua_block {
                 local is_who = require "is_who"
-                is_who.handle_register_page()
+                is_who.route_to_handler("register")
             }
         }
 
         location = / {
             content_by_lua_block {
                 local is_who = require "is_who"
-                is_who.handle_index_page()
+                is_who.route_to_handler("index")
             }
         }
-        
+
         location = /chat {
             content_by_lua_block {
                 local is_who = require "is_who"
                 is_who.route_to_handler("chat")
             }
         }
-        
+
         location = /dash {
             content_by_lua_block {
                 local is_who = require "is_who"
                 is_who.route_to_handler("dash")
             }
         }
-        
+
         location = /pending {
             content_by_lua_block {
                 local is_who = require "is_who"
-                is_who.route_to_handler("dash")
+                is_who.route_to_handler("pending")
             }
         }
 
-        # API ROUTES
+        # API ROUTES - Updated guest handling
         location ~ ^/api/auth/ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -191,6 +191,7 @@ http {
             }
         }
 
+        # UPDATED: Guest API now handled by is_none for session creation
         location ~ ^/api/guest/ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -205,8 +206,19 @@ http {
             
             lua_need_request_body on;
             content_by_lua_block {
+                # Route guest API based on user type
                 local is_who = require "is_who"
-                is_who.handle_guest_api()
+                local user_type = is_who.set_vars()
+                
+                if user_type == "is_none" then
+                    # Non-authenticated users creating guest sessions
+                    local is_none = require "is_none"
+                    is_none.handle_guest_session_api()
+                else
+                    # Existing guests managing their sessions
+                    local is_who = require "is_who"
+                    is_who.handle_guest_api()
+                end
             }
         }
 
@@ -223,12 +235,73 @@ http {
             }
             
             # CRITICAL: Complete streaming configuration for SSE
-            chunked_transfer_encoding on;      # Enable chunked encoding
+            chunked_transfer_encoding on;
             lua_need_request_body on;
-            lua_check_client_abort on;         # Check if client disconnects
+            lua_check_client_abort on;
             content_by_lua_block {
                 local is_who = require "is_who"
                 is_who.route_to_handler("chat_api")
+            }
+        }
+
+        # OLLAMA API ROUTES (Updated from vLLM)
+        location ~ ^/api/v1/chat/completions$ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            chunked_transfer_encoding on;
+            lua_need_request_body on;
+            lua_check_client_abort on;
+            content_by_lua_block {
+                local is_who = require "is_who"
+                is_who.route_to_handler("ollama_chat_api")
+            }
+        }
+
+        location ~ ^/api/v1/models$ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            content_by_lua_block {
+                local is_who = require "is_who"
+                is_who.route_to_handler("ollama_models_api")
+            }
+        }
+
+        location ~ ^/api/v1/completions$ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            chunked_transfer_encoding on;
+            lua_need_request_body on;
+            lua_check_client_abort on;
+            content_by_lua_block {
+                local is_who = require "is_who"
+                is_who.route_to_handler("ollama_completions_api")
             }
         }
 
