--- a/.env
+++ b/.env
@@ -23,31 +23,45 @@ MODEL_NAME=devstral
 # =============================================================================
 
 # Core model parameters
-MODEL_TEMPERATURE=0.7                      # Default: 0.7
-MODEL_TOP_P=0.9                           # Default: 0.9  
-MODEL_TOP_K=40                            # Default: 40
-MODEL_MIN_P=0.0                           # Default: 0.0 (disabled)
-MODEL_REPEAT_PENALTY=1.1                  # Default: 1.1
-MODEL_REPEAT_LAST_N=64                    # Default: 64
+MODEL_TEMPERATURE=0.7
+MODEL_TOP_P=0.9
+MODEL_TOP_K=40
+MODEL_MIN_P=0.0
+MODEL_REPEAT_PENALTY=1.1
+MODEL_REPEAT_LAST_N=64
 
 # Context and prediction settings
-MODEL_NUM_CTX=2048                        # Context window
-MODEL_NUM_PREDICT=512                     # Max tokens to generate
-MODEL_SEED=0                              # Default: 0    
+MODEL_NUM_CTX=2048
+MODEL_NUM_PREDICT=512
+MODEL_SEED=0
 
 # Model file management
-OLLAMA_NUM_THREAD=4                       # CPU threads for Ollama processing
-OLLAMA_MMAP=false                         # Disable memory mapping (force RAM loading)
+OLLAMA_NUM_THREAD=4
+OLLAMA_MMAP=false
+OLLAMA_NUM_PARALLEL=3
+OLLAMA_GPU_LAYERS=8
+
+# Ollama server configuration
+OLLAMA_HOST=0.0.0.0:11434
+OLLAMA_ORIGINS=*
+OLLAMA_MODELS=/root/.ollama/models
+OLLAMA_MAX_LOADED_MODELS=1
+OLLAMA_FLASH_ATTENTION=1
+
+# Ollama initialization script settings
+OLLAMA_MAX_RETRIES=30
+OLLAMA_RETRY_INTERVAL=2
+MODELFILE_PATH=/root/.ollama/Modelfile
 
 # =============================================================================
 # 📱 APPLICATION SETTINGS
 # =============================================================================
-RATE_LIMIT_MESSAGES_PER_MINUTE=12        # For 3 concurrent streams
-MAX_MESSAGE_LENGTH=8000                   # For longer context
+RATE_LIMIT_MESSAGES_PER_MINUTE=12
+MAX_MESSAGE_LENGTH=8000
 
 # User Management
-MAX_CHATS_PER_USER=3                      # Match parallel processing
-MAX_PENDING_USERS=5                       
+MAX_CHATS_PER_USER=3
+MAX_PENDING_USERS=5
 MIN_USERNAME_LENGTH=3
 MAX_USERNAME_LENGTH=12
 MIN_PASSWORD_LENGTH=6
@@ -57,16 +71,13 @@ MAX_PASSWORD_LENGTH=16
 # 🐳 DOCKER RESOURCES - OPTIMIZED FOR CPU+GPU HYBRID
 # =============================================================================
 
-# Ollama configuration - DEV (32GB VRAM)
-OLLAMA_CPU=4.0                            # More CPU for model processing
-OLLAMA_MEMORY=22G                         # Large CPU RAM for model layers
-OLLAMA_GPU_LAYERS=8                      # Partial GPU offload
-
-# Other services
+# Hardware configuration
+OLLAMA_CPU=4.0
+OLLAMA_MEMORY=22G
 REDIS_MEMORY=1G
-REDIS_CPU=1.0                             
-NGINX_MEMORY=512M                           
-NGINX_CPU=1.0                             
+REDIS_CPU=1.0
+NGINX_MEMORY=512M
+NGINX_CPU=1.0
 
 # =============================================================================
 # 📦 REDIS & NETWORK
