--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,28 @@ services:
     image: ollama/ollama:latest
     container_name: devstral-ollama
     environment:
-      - OLLAMA_HOST=0.0.0.0:11434
-      - OLLAMA_ORIGINS=*
-      - OLLAMA_MODELS=/models
-      - OLLAMA_NUM_PARALLEL=3
-      - OLLAMA_MAX_LOADED_MODELS=1
-      - OLLAMA_FLASH_ATTENTION=1
-      # Memory management
-      - OLLAMA_MMAP=false
-      - OLLAMA_NUM_GPU=20
-      - OLLAMA_NUM_THREAD=8
+      - OLLAMA_HOST=${OLLAMA_HOST}
+      - OLLAMA_ORIGINS=${OLLAMA_ORIGINS}
+      - OLLAMA_MODELS=${OLLAMA_MODELS}
+      - OLLAMA_NUM_PARALLEL=${OLLAMA_NUM_PARALLEL}
+      - OLLAMA_MAX_LOADED_MODELS=${OLLAMA_MAX_LOADED_MODELS}
+      - OLLAMA_FLASH_ATTENTION=${OLLAMA_FLASH_ATTENTION}
+      - OLLAMA_MMAP=${OLLAMA_MMAP}
+      - OLLAMA_NUM_GPU=${OLLAMA_GPU_LAYERS}
+      - OLLAMA_NUM_THREAD=${OLLAMA_NUM_THREAD}
+      - MODEL_NAME=${MODEL_NAME}
+      - MODEL_TEMPERATURE=${MODEL_TEMPERATURE}
+      - MODEL_TOP_P=${MODEL_TOP_P}
+      - MODEL_TOP_K=${MODEL_TOP_K}
+      - MODEL_MIN_P=${MODEL_MIN_P}
+      - MODEL_REPEAT_PENALTY=${MODEL_REPEAT_PENALTY}
+      - MODEL_REPEAT_LAST_N=${MODEL_REPEAT_LAST_N}
+      - MODEL_NUM_CTX=${MODEL_NUM_CTX}
+      - MODEL_NUM_PREDICT=${MODEL_NUM_PREDICT}
+      - MODEL_SEED=${MODEL_SEED}
+      - OLLAMA_MAX_RETRIES=${OLLAMA_MAX_RETRIES}
+      - OLLAMA_RETRY_INTERVAL=${OLLAMA_RETRY_INTERVAL}
+      - MODELFILE_PATH=${MODELFILE_PATH}
     ports:
       - "11434:11434"
     volumes:
@@ -22,23 +34,15 @@ services:
     deploy:
       resources:
         limits:
-          cpus: ${OLLAMA_CPU:-4.0}
-          memory: ${OLLAMA_MEMORY:-22G}
+          cpus: ${OLLAMA_CPU}
+          memory: ${OLLAMA_MEMORY}
         reservations:
-          cpus: ${OLLAMA_CPU:-4.0}
-          memory: ${OLLAMA_MEMORY:-22G}
+          cpus: ${OLLAMA_CPU}
+          memory: ${OLLAMA_MEMORY}
           devices:
             - capabilities: [gpu]
     restart: unless-stopped
-    # Initialize the model on startup
-    entrypoint: >
-      sh -c "
-        ollama serve &
-        sleep 10 &&
-        ollama create devstral -f /root/.ollama/Modelfile &&
-        ollama run devstral 'Hello' &&
-        wait
-      "
+    entrypoint: ["/root/.ollama/init-ollama.sh"]
 
   redis:
     build: ./redis
@@ -74,9 +78,19 @@ services:
       - JWT_SECRET=${JWT_SECRET}
       - REDIS_HOST=${REDIS_HOST}
       - REDIS_PORT=${REDIS_PORT}
-      - OLLAMA_URL=${OLLAMA_URL}
-      - OLLAMA_MODEL=${OLLAMA_MODEL}
+      - MODEL_URL=${MODEL_URL}
+      - MODEL_NAME=${MODEL_NAME}
       - MIN_PASSWORD_LENGTH=${MIN_PASSWORD_LENGTH}
+      - ALLOWED_DOMAINS=${ALLOWED_DOMAINS}
+      - RATE_LIMIT_MESSAGES_PER_MINUTE=${RATE_LIMIT_MESSAGES_PER_MINUTE}
+      - MAX_MESSAGE_LENGTH=${MAX_MESSAGE_LENGTH}
+      - MAX_CHATS_PER_USER=${MAX_CHATS_PER_USER}
+      - MAX_PENDING_USERS=${MAX_PENDING_USERS}
+      - MIN_USERNAME_LENGTH=${MIN_USERNAME_LENGTH}
+      - MAX_USERNAME_LENGTH=${MAX_USERNAME_LENGTH}
+      - MAX_PASSWORD_LENGTH=${MAX_PASSWORD_LENGTH}
+      - LOG_LEVEL=${LOG_LEVEL}
+      - LOG_FORMAT=${LOG_FORMAT}
     volumes:
       - ./volumes/nginx_cache:/var/cache/nginx
       - ./volumes/nginx_logs:/var/log/nginx
@@ -93,6 +107,7 @@ services:
     restart: unless-stopped
     depends_on:
       - ollama
+      - redis
 
 networks:
   devstral-network:
