--- a/ollama/Dockerfile
+++ b/ollama/Dockerfile
@@ -1,11 +1,5 @@
 FROM ollama/ollama:latest
 
-# Install curl for health checks and envsubst for template processing
-RUN apt-get update && \
-    apt-get install -y curl gettext-base && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
-
 # Create necessary directories
 RUN mkdir -p /root/.ollama/models
 
@@ -13,11 +7,11 @@ RUN mkdir -p /root/.ollama/models
 COPY models/Devstral-Small-2507-Q4_K_M.gguf /root/.ollama/models/Devstral-Small-2507-Q4_K_M.gguf
 
 # Copy the initialization script and make it executable
-COPY init-ollama.sh /root/.ollama/init-ollama.sh
-RUN chmod +x /root/.ollama/init-ollama.sh
+COPY scripts/init-ollama.sh /root/.ollama/scripts/init-ollama.sh
+RUN chmod +x /root/.ollama/scripts/init-ollama.sh
 
 # Copy the Modelfile template
-COPY Modelfile /root/.ollama/Modelfile
+COPY scripts/Modelfile /root/.ollama/scripts/Modelfile
 
 # Set the entrypoint to our initialization script
-ENTRYPOINT ["/root/.ollama/init-ollama.sh"]
+ENTRYPOINT ["/root/.ollama/scripts/init-ollama.sh"]
