volume vs copy conflict clear

--- a/.env
+++ b/.env
@@ -49,8 +49,8 @@ OLLAMA_MAX_LOADED_MODELS=1
 OLLAMA_FLASH_ATTENTION=1
 
 # Ollama initialization script settings
-OLLAMA_MAX_RETRIES=30
-OLLAMA_RETRY_INTERVAL=2
+OLLAMA_MAX_RETRIES=45
+OLLAMA_RETRY_INTERVAL=20
 MODELFILE_PATH=/root/.ollama/Modelfile
 
 # =============================================================================
