--- a/.env
+++ b/.env
@@ -51,7 +51,7 @@ OLLAMA_FLASH_ATTENTION=1
 # Ollama initialization script settings
 OLLAMA_MAX_RETRIES=45
 OLLAMA_RETRY_INTERVAL=20
-MODELFILE_PATH=/root/.ollama/Modelfile
+MODELFILE_PATH=/root/.ollama/scripts/Modelfile
 
 # =============================================================================
 # 📱 APPLICATION SETTINGS
