--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -87,43 +87,43 @@ http {
         # TEMPLATE-BASED ROUTES
         location = /login {
             content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.route_to_handler("login")
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.route_to_handler("login")
             }
         }
 
         location = /register {
             content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.route_to_handler("register")
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.route_to_handler("register")
             }
         }
 
         location = / {
             content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.route_to_handler("index")
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.route_to_handler("index")
             }
         }
 
         location = /chat {
             content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.route_to_handler("chat")
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.route_to_handler("chat")
             }
         }
 
         location = /dash {
             content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.route_to_handler("dash")
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.route_to_handler("dash")
             }
         }
 
         location = /pending {
             content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.route_to_handler("pending")
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.route_to_handler("pending")
             }
         }
 
@@ -142,8 +142,8 @@ http {
             
             lua_need_request_body on;
             content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.handle_auth_api()
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.handle_auth_api()
             }
         }
 
@@ -161,8 +161,8 @@ http {
             
             lua_need_request_body on;
             content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.handle_register_api()
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.handle_register_api()
             }
         }
 
@@ -180,8 +180,8 @@ http {
             
             lua_need_request_body on;
             content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.handle_admin_api()
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.handle_admin_api()
             }
         }
 
@@ -201,8 +201,8 @@ http {
             lua_need_request_body on;
             content_by_lua_block {
                 # Route guest API based on user type
-                local is_who = require "is_who"
-                local user_type = is_who.set_vars()
+                local aaa_is_who = require "aaa_is_who"
+                local user_type = aaa_is_who.set_vars()
                 
                 if user_type == "is_none" then
                     # Non-authenticated users creating guest sessions
@@ -210,8 +210,8 @@ http {
                     is_none.handle_guest_session_api()
                 else
                     # Existing guests managing their sessions
-                    local is_who = require "is_who"
-                    is_who.handle_guest_api()
+                    local aaa_is_who = require "aaa_is_who"
+                    aaa_is_who.handle_guest_api()
                 end
             }
         }
@@ -233,8 +233,8 @@ http {
             lua_need_request_body on;
             lua_check_client_abort on;
             content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.route_to_handler("chat_api")
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.route_to_handler("chat_api")
             }
         }
 
@@ -255,8 +255,8 @@ http {
             lua_need_request_body on;
             lua_check_client_abort on;
             content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.route_to_handler("ollama_chat_api")
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.route_to_handler("ollama_chat_api")
             }
         }
 
@@ -273,8 +273,8 @@ http {
             }
             
             content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.route_to_handler("ollama_models_api")
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.route_to_handler("ollama_models_api")
             }
         }
 
@@ -294,8 +294,8 @@ http {
             lua_need_request_body on;
             lua_check_client_abort on;
             content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.route_to_handler("ollama_completions_api")
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.route_to_handler("ollama_completions_api")
             }
         }
 
@@ -336,31 +336,31 @@ http {
         location @custom_404 {
             internal;
             content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.handle_404_page()
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.handle_404_page()
             }
         }
 
         location @custom_429 {
             internal;
             content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.handle_429_page()
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.handle_429_page()
             }
         }
         
         location @custom_50x {
             internal;
             content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.handle_50x_page()
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.handle_50x_page()
             }
         }
 
         location / {
             content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.handle_404_page()
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.handle_404_page()
             }
         }
     }
