whitelist nginx routes through is_who

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - CONFIGURED FOR OLLAMA BACKEND
+# nginx/nginx.conf - DEFAULT BLOCK ALL, WHITELIST THROUGH aaa_is_who
 worker_processes auto;
 error_log /var/log/nginx/error.log info;
 pid /var/run/nginx.pid;
@@ -59,7 +59,7 @@ http {
         listen 80;
         server_name localhost;
 
-        # STATIC ASSETS
+        # STATIC ASSETS - Only exception to default block
         location /js/ {
             root /usr/local/openresty/nginx/dynamic_content;
             expires 1y;
@@ -84,7 +84,9 @@ http {
             access_log off;
         }
 
-        # TEMPLATE-BASED ROUTES
+        # WHITELISTED ROUTES - All go through aaa_is_who for permission checking
+        
+        # Template routes
         location = /login {
             content_by_lua_block {
                 local aaa_is_who = require "aaa_is_who"
@@ -120,15 +122,8 @@ http {
             }
         }
 
-        location = /pending {
-            content_by_lua_block {
-                local aaa_is_who = require "aaa_is_who"
-                aaa_is_who.route_to_handler("pending")
-            }
-        }
-
-        # API ROUTES - Updated guest handling
-        location ~ ^/api/auth/ {
+        # API routes - Only these specific endpoints allowed
+        location ~ ^/api/auth/(login|logout|check)$ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
@@ -166,80 +161,8 @@ http {
             }
         }
 
-        location ~ ^/api/admin/ {
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-            
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain; charset=utf-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
-            
-            lua_need_request_body on;
-            content_by_lua_block {
-                local aaa_is_who = require "aaa_is_who"
-                aaa_is_who.handle_admin_api()
-            }
-        }
-
-        # UPDATED: Guest API now handled by is_none for session creation
-        location ~ ^/api/guest/ {
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-            
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain; charset=utf-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
-            
-            lua_need_request_body on;
-            content_by_lua_block {
-                # Route guest API based on user type
-                local aaa_is_who = require "aaa_is_who"
-                local user_type = aaa_is_who.set_vars()
-                
-                if user_type == "is_none" then
-                    # Non-authenticated users creating guest sessions
-                    local is_none = require "is_none"
-                    is_none.handle_guest_session_api()
-                else
-                    # Existing guests managing their sessions
-                    local aaa_is_who = require "aaa_is_who"
-                    aaa_is_who.handle_guest_api()
-                end
-            }
-        }
-
-        location ~ ^/api/chat/ {
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-            
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain; charset=utf-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
-            
-            # CRITICAL: Complete streaming configuration for SSE
-            chunked_transfer_encoding on;
-            lua_need_request_body on;
-            lua_check_client_abort on;
-            content_by_lua_block {
-                local aaa_is_who = require "aaa_is_who"
-                aaa_is_who.route_to_handler("chat_api")
-            }
-        }
-
-        # OLLAMA API ROUTES (Updated from vLLM)
-        location ~ ^/api/v1/chat/completions$ {
+        # Only the chat completions API - all others blocked
+        location = /api/v1/chat/completions {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
@@ -258,74 +181,6 @@ http {
                 local aaa_is_who = require "aaa_is_who"
                 aaa_is_who.route_to_handler("ollama_chat_api")
             }
-        }
-
-        location ~ ^/api/v1/models$ {
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-            
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain; charset=utf-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
-            
-            content_by_lua_block {
-                local aaa_is_who = require "aaa_is_who"
-                aaa_is_who.route_to_handler("ollama_models_api")
-            }
-        }
-
-        location ~ ^/api/v1/completions$ {
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-            
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain; charset=utf-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
-            
-            chunked_transfer_encoding on;
-            lua_need_request_body on;
-            lua_check_client_abort on;
-            content_by_lua_block {
-                local aaa_is_who = require "aaa_is_who"
-                aaa_is_who.route_to_handler("ollama_completions_api")
-            }
-        }
-
-        # OLLAMA DIRECT PROXY (for debugging/testing)
-        location ~ ^/ollama/(.*)$ {
-            # CORS headers
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
-            
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain; charset=utf-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
-            
-            # Direct proxy to Ollama
-            proxy_pass http://ollama:11434/$1$is_args$args;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Streaming settings
-            proxy_buffering off;
-            proxy_request_buffering off;
-            proxy_http_version 1.1;
-            proxy_set_header Connection "";
-            chunked_transfer_encoding on;
         }
 
         # ERROR PAGES
@@ -357,11 +212,9 @@ http {
             }
         }
 
+        # DEFAULT BLOCK ALL - Everything else returns 500
         location / {
-            content_by_lua_block {
-                local aaa_is_who = require "aaa_is_who"
-                aaa_is_who.handle_404_page()
-            }
+            return 500;
         }
     }
 }
