whitelist guest routes

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -161,10 +161,10 @@ http {
             }
         }
 
-        # Only the chat completions API - all others blocked
-        location = /api/v1/chat/completions {
+        # ADDED: Guest API routes for session management
+        location ~ ^/api/guest/(create-session|challenge-status|challenge-response|stats)$ {
             add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
             
             if ($request_method = 'OPTIONS') {
@@ -174,14 +174,14 @@ http {
                 return 204;
             }
             
-            chunked_transfer_encoding on;
             lua_need_request_body on;
-            lua_check_client_abort on;
             content_by_lua_block {
                 local aaa_is_who = require "aaa_is_who"
-                aaa_is_who.route_to_handler("ollama_chat_api")
+                aaa_is_who.handle_guest_api()
             }
         }
+
+
 
         # ERROR PAGES
         error_page 404 @custom_404;
