/api/auth/check removal as checks are done internally, looking into html/js next

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -122,10 +122,10 @@ http {
             }
         }
 
-        # API routes - Only these specific endpoints allowed
-        location ~ ^/api/auth/(login|logout|check)$ {
+        # API routes - Only these specific endpoints allowed (REMOVED /check)
+        location ~ ^/api/auth/(login|logout)$ {
             add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
             
             if ($request_method = 'OPTIONS') {
@@ -161,7 +161,7 @@ http {
             }
         }
 
-        # ADDED: Guest API routes for session management
+        # Guest API routes for session management
         location ~ ^/api/guest/(create-session|challenge-status|challenge-response|stats)$ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -181,7 +181,25 @@ http {
             }
         }
 
-
+        # Chat API routes - Authentication handled internally
+        location ~ ^/api/chat/(stream|history|clear)$ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            lua_need_request_body on;
+            content_by_lua_block {
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.route_to_handler("chat_api")
+            }
+        }
 
         # ERROR PAGES
         error_page 404 @custom_404;
@@ -212,9 +230,9 @@ http {
             }
         }
 
-        # DEFAULT BLOCK ALL - Everything else returns 500
+        # DEFAULT BLOCK ALL - Everything else returns 404
         location / {
-            return 500;
+            return 404;
         }
     }
 }
