/usr/local/openresty/nginx/dynamic_content/ (not /usr/local/openresty/nginx/static/),

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -122,7 +122,7 @@ http {
             }
         }
 
-        # API routes - Only these specific endpoints allowed (REMOVED /check)
+        # API routes - Only these specific endpoints allowed
         location ~ ^/api/auth/(login|logout)$ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
@@ -197,11 +197,51 @@ http {
             lua_need_request_body on;
             content_by_lua_block {
                 local aaa_is_who = require "aaa_is_who"
-                aaa_is_who.route_to_handler("chat_api")
+                aaa_is_who.handle_ollama_chat_api()
             }
         }
 
-        # ERROR PAGES
+        # Admin API routes - Authentication handled internally
+        location ~ ^/api/admin/(stats|users|clear-guest-sessions)$ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            lua_need_request_body on;
+            content_by_lua_block {
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.handle_admin_api()
+            }
+        }
+
+        # Admin User Management API routes
+        location ~ ^/api/admin/users/(pending|approve|reject)$ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            lua_need_request_body on;
+            content_by_lua_block {
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.handle_admin_api()
+            }
+        }
+
+        # ERROR PAGES - FIXED: Use manage_views through aaa_is_who
         error_page 404 @custom_404;
         error_page 429 @custom_429;
         error_page 500 502 503 504 @custom_50x;
@@ -210,7 +250,7 @@ http {
             internal;
             content_by_lua_block {
                 local aaa_is_who = require "aaa_is_who"
-                aaa_is_who.handle_404_page()
+                aaa_is_who.handle_404()
             }
         }
 
@@ -218,7 +258,7 @@ http {
             internal;
             content_by_lua_block {
                 local aaa_is_who = require "aaa_is_who"
-                aaa_is_who.handle_429_page()
+                aaa_is_who.handle_429()
             }
         }
         
@@ -226,7 +266,7 @@ http {
             internal;
             content_by_lua_block {
                 local aaa_is_who = require "aaa_is_who"
-                aaa_is_who.handle_50x_page()
+                aaa_is_who.handle_50x()
             }
         }
 
